--- a/index.html
+++ b/index.html
@@ -5,13 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title></title>
     <link href="./style.css" rel="stylesheet" />
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
     <script src="./main.js"></script>
   </head>
   <body>
-    <div class="container">
-      <div class="title"></div>
-      <div class="human body"></div>
-      <div class="ocean"></div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
+          <h3>
+            h3. Lorem ipsum dolor sit amet.
+          </h3>
+          <div class="row">
+            <div class="col-md-6">
+              <img alt="Bootstrap Image Preview" src="/img/sports-q-c-140-140-3.jpg" />
+            </div>
+            <div class="col-md-6">
+              <img alt="Bootstrap Image Preview" src="/img/sports-q-c-140-140-3.jpg" />
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
