--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title></title>
-    <link href="./style.css" rel="stylesheet" />
+    <link href="./css/styles.css" rel="stylesheet" />
     <link href="./css/bootstrap.min.css" rel="stylesheet">
     <script src="./main.js"></script>
   </head>
