--- a/index.html
+++ b/index.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title></title>
     <link href="./css/styles.css" rel="stylesheet" />
-    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet" />
     <script src="./main.js"></script>
   </head>
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-12">
-          <h3>
-            h3. Lorem ipsum dolor sit amet.
-          </h3>
+        <div class="col-md-12" id="titre">
+          <h3>h3. Lorem ipsum dolor sit amet.</h3>
           <div class="row">
-            <div class="col-md-6">
-              <img alt="Bootstrap Image Preview" src="/img/sports-q-c-140-140-3.jpg" />
-            </div>
-            <div class="col-md-6">
-              <img alt="Bootstrap Image Preview" src="/img/sports-q-c-140-140-3.jpg" />
-            </div>
+            <div class="col-md-6" id="corps-humain">Corps</div>
+            <div class="col-md-6" id="ocean">Ocean</div>
           </div>
         </div>
       </div>
