--- a/index.html
+++ b/index.html
@@ -1,24 +1,98 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title></title>
-    <link href="./css/styles.css" rel="stylesheet" />
-    <link href="./css/bootstrap.min.css" rel="stylesheet" />
-    <script src="./main.js"></script>
-  </head>
-  <body>
-    <div class="container-fluid">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Symbiose entre le Corps Humain et l’Océan</title>
+  <link href="./css/styles.css" rel="stylesheet" />
+  <link href="./css/bootstrap.min.css" rel="stylesheet" />
+</head>
+<body>
+  <div class="container-fluid">
+    <!-- Titre et introduction -->
+    <header>
+      <img src="css/Capture d_écran_2024-12-05_23-32-33.png" alt="Logo" id="footer-logo">
+      <h1>Symbiose entre le Corps Humain et l’Océan</h1>
+      <h2>Une Harmonie Naturelle</h2>
+    </header>
+    <section>
+      <p>
+        Bienvenue dans un voyage captivant où le corps humain et l’océan se révèlent dans toute leur splendeur. 
+        Ces deux entités, bien qu'apparemment distinctes, partagent des mécanismes et des fonctions étonnamment similaires, 
+        illustrant à quel point la nature est interconnectée. Plongeons dans ces parallèles fascinants.
+      </p>
+    </section>
+
+    <!-- Parallélismes -->
+    <section class="parallelism">
       <div class="row">
-        <div class="col-md-12" id="titre">
-          <h3>h3. Lorem ipsum dolor sit amet.</h3>
-          <div class="row">
-            <div class="col-md-6" id="corps-humain">Corps</div>
-            <div class="col-md-6" id="ocean">Ocean</div>
-          </div>
+        <div class="col-md-6">
+          <h3>Corps Humain</h3>
+          <img src="human-skeleton.jpg" alt="Illustration du squelette humain" />
+          <p>
+            Le squelette humain offre un support, une protection et une structure qui permettent le mouvement et la stabilité.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <h3>Océan</h3>
+          <img src="coral-reef.jpg" alt="Illustration des récifs coralliens" />
+          <p>
+            Dans l’océan, les récifs coralliens jouent un rôle similaire. Véritables "squelettes" des écosystèmes marins, ils abritent une biodiversité exceptionnelle et protègent les côtes contre l’érosion.
+          </p>
         </div>
       </div>
-    </div>
-  </body>
+    </section>
+
+    <section class="parallelism">
+      <div class="row">
+        <div class="col-md-6">
+          <h3>Corps Humain</h3>
+          <img src="nervous-system.jpg" alt="Illustration du système nerveux humain" />
+          <p>
+            Le système nerveux humain transmet des signaux électriques entre le cerveau et les différentes parties du corps, orchestrant nos mouvements, nos pensées et nos réflexes.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <h3>Océan</h3>
+          <img src="whale-migration.jpg" alt="Illustration des migrations des baleines" />
+          <p>
+            Dans l’océan, les écosystèmes marins communiquent également. Par exemple, les migrations des baleines transportent des nutriments vitaux qui fertilisent les eaux et soutiennent d'autres formes de vie marine.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="parallelism">
+      <div class="row">
+        <div class="col-md-6">
+          <h3>Corps Humain</h3>
+          <img src="toxins-body.jpg" alt="Illustration des toxines dans le corps humain" />
+          <p>
+            Les toxines dans le corps humain, qu’elles proviennent d’une alimentation déséquilibrée ou de l’environnement, peuvent perturber les fonctions vitales et provoquer des maladies.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <h3>Océan</h3>
+          <img src="ocean-pollution.jpg" alt="Illustration de la pollution marine" />
+          <p>
+            De même, les océans sont confrontés à une accumulation de déchets plastiques, de produits chimiques et de pollutions diverses, mettant en péril la vie marine et, par ricochet, la nôtre.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Conclusion -->
+    <section>
+      <h3>Une Interconnexion Essentielle</h3>
+      <p>
+        Le corps humain et l’océan ne sont pas juste des entités séparées ; ils sont des miroirs l’un de l’autre, révélant des processus similaires qui témoignent de l’harmonie de la nature. 
+        Protéger l’un, c’est inévitablement protéger l’autre.
+      </p>
+      <p>
+        <strong>Plongez plus profondément :</strong> Explorez chaque parallèle sur ce site et découvrez comment, ensemble, nous pouvons agir pour préserver cette symbiose vitale.
+      </p>
+    </section>
+  </div>
+
+</body>
 </html>
