ajout des images

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="col-md-6">
             <h3>Corps Humain</h3>
             <img
-              src="human-skeleton.jpg"
+              src="images/human-skeleton.png"
               alt="Illustration du squelette humain"
             />
             <p>
@@ -42,7 +42,7 @@
           <div class="col-md-6">
             <h3>Océan</h3>
             <img
-              src="coral-reef.jpg"
+              src="images/coral-reef.png"
               alt="Illustration des récifs coralliens"
             />
             <p>
@@ -60,7 +60,7 @@
           <div class="col-md-6">
             <h3>Corps Humain</h3>
             <img
-              src="nervous-system.jpg"
+              src="images/nervous-system.png"
               alt="Illustration du système nerveux humain"
             />
             <p>
@@ -72,7 +72,7 @@
           <div class="col-md-6">
             <h3>Océan</h3>
             <img
-              src="whale-migration.jpg"
+              src="images/whale-migration.png"
               alt="Illustration des migrations des baleines"
             />
             <p>
@@ -90,7 +90,7 @@
           <div class="col-md-6">
             <h3>Corps Humain</h3>
             <img
-              src="toxins-body.jpg"
+              src="images/toxins-body.png"
               alt="Illustration des toxines dans le corps humain"
             />
             <p>
@@ -102,7 +102,7 @@
           <div class="col-md-6">
             <h3>Océan</h3>
             <img
-              src="ocean-pollution.jpg"
+              src="images/ocean-pollution.png"
               alt="Illustration de la pollution marine"
             />
             <p>
