--- a/index.html
+++ b/index.html
@@ -25,94 +25,111 @@
         </p>
       </section>
 
-      <!-- Parallélismes -->
-      <section class="parallelism">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-12">
+            <div class="row">
+          <div class="col-md-6" align="center">
             <h3>Corps Humain</h3>
-            <img
+            <div class="row">
+              <div class="col-md-4">
+            <div class="image">
+                <img
               src="images/human-skeleton.png"
               alt="Illustration du squelette humain"
             />
-            <p>
-              Le squelette humain offre un support, une protection et une
+              <p>
+                Le squelette humain offre un support, une protection et une
               structure qui permettent le mouvement et la stabilité.
             </p>
+            </div>
           </div>
-          <div class="col-md-6">
-            <h3>Océan</h3>
+              <div class="col-md-4">
+            <div class="image">
             <img
+            src="images/toxins-body.png"
+            alt="Illustration des toxines dans le corps humain"
+          />
+          <p>
+            Les toxines dans le corps humain, qu’elles proviennent d’une
+            alimentation déséquilibrée ou de l’environnement, peuvent
+            perturber les fonctions vitales et provoquer des maladies.
+          </p>
+      </div>
+    </div>
+
+          <div class="col-md-4">
+          <div class="image">
+            <img
+          src="images/nervous-system.png"
+          alt="Illustration du système nerveux humain"
+        />
+
+        <p>
+          Le système nerveux humain transmet des signaux électriques entre
+          le cerveau et les différentes parties du corps, orchestrant nos
+          mouvements, nos pensées et nos réflexes.
+        </p> </div>
+      </div>
+      </div>
+    </div>
+
+          <div class="col-md-6" align="center">
+            <h3>Océan</h3>
+            <!-- <div class="card"> 
+              <h5 class="card-header">
+                Squellette
+              </h5>
+              <div class="card-body"><img
               src="images/coral-reef.png"
               alt="Illustration des récifs coralliens"
-            />
+            /></div>
+            <div class="card-footer">
             <p>
               Dans l’océan, les récifs coralliens jouent un rôle similaire.
               Véritables "squelettes" des écosystèmes marins, ils abritent une
               biodiversité exceptionnelle et protègent les côtes contre
               l’érosion.
-            </p>
+            </p> </div>
           </div>
-        </div>
-      </section>
-
-      <section class="parallelism">
-        <div class="row">
-          <div class="col-md-6">
-            <h3>Corps Humain</h3>
-            <img
-              src="images/nervous-system.png"
-              alt="Illustration du système nerveux humain"
-            />
-            <p>
-              Le système nerveux humain transmet des signaux électriques entre
-              le cerveau et les différentes parties du corps, orchestrant nos
-              mouvements, nos pensées et nos réflexes.
-            </p>
-          </div>
-          <div class="col-md-6">
-            <h3>Océan</h3>
-            <img
+            <div class="card">
+              <h5 class="card-header">
+                Squellette
+              </h5>
+              <div class="card-body"><img
               src="images/whale-migration.png"
               alt="Illustration des migrations des baleines"
-            />
+            /></div>
+            <div class="card-footer">
             <p>
               Dans l’océan, les écosystèmes marins communiquent également. Par
               exemple, les migrations des baleines transportent des nutriments
               vitaux qui fertilisent les eaux et soutiennent d'autres formes de
               vie marine.
-            </p>
+            </p> </div>
           </div>
-        </div>
-      </section>
-
-      <section class="parallelism">
-        <div class="row">
-          <div class="col-md-6">
-            <h3>Corps Humain</h3>
-            <img
-              src="images/toxins-body.png"
-              alt="Illustration des toxines dans le corps humain"
-            />
-            <p>
-              Les toxines dans le corps humain, qu’elles proviennent d’une
-              alimentation déséquilibrée ou de l’environnement, peuvent
-              perturber les fonctions vitales et provoquer des maladies.
-            </p>
-          </div>
-          <div class="col-md-6">
-            <h3>Océan</h3>
-            <img
+            <div class="card">
+              <h5 class="card-header">
+                Squellette
+              </h5>
+              <div class="card-body"><img
               src="images/ocean-pollution.png"
               alt="Illustration de la pollution marine"
-            />
+            /></div>
+            <div class="card-footer">
             <p>
               De même, les océans sont confrontés à une accumulation de déchets
               plastiques, de produits chimiques et de pollutions diverses,
               mettant en péril la vie marine et, par ricochet, la nôtre.
-            </p>
+            </p> </div>
+          </div>-->
+
           </div>
         </div>
-      </section>
+
+            
+          </div>
+        </div>
+    </div>
 
       <!-- Conclusion -->
       <section>
