--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./main.js"></script>
   </head>
   <body>
+    <div class="container-fluid">
     <!-- Titre et introduction -->
     <header>
       <img src="images/logo.png" alt="Logo" id="footer-logo" />
@@ -82,58 +83,48 @@
 
             <div class="col-md-6" align="center">
               <h3>Océan</h3>
-              <div class="card" id="coral-reef">
-                <h5 class="card-header">Squellette</h5>
-                <div class="card-body">
+              <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+             <div class="img" id="coral-reef">
                   <img
                     src="images/coral-reef.png"
                     alt="Illustration des récifs coralliens"
                   />
-                </div>
-                <div class="card-footer">
                   <p>
                     Dans l’océan, les récifs coralliens jouent un rôle
                     similaire. Véritables "squelettes" des écosystèmes marins,
                     ils abritent une biodiversité exceptionnelle et protègent
                     les côtes contre l’érosion.
                   </p>
-                </div>
               </div>
-              <div class="card" id="whale-migration">
-                <h5 class="card-header">Squellette</h5>
-                <div class="card-body">
+              <div class="img" id="whale-migration">
                   <img
                     src="images/whale-migration.png"
                     alt="Illustration des migrations des baleines"
                   />
-                </div>
-                <div class="card-footer">
                   <p>
                     Dans l’océan, les écosystèmes marins communiquent également.
                     Par exemple, les migrations des baleines transportent des
                     nutriments vitaux qui fertilisent les eaux et soutiennent
                     d'autres formes de vie marine.
                   </p>
-                </div>
               </div>
-              <div class="card" id="ocean-pollution">
-                <h5 class="card-header">Squellette</h5>
-                <div class="card-body">
+              <div class="img" id="ocean-pollution">
                   <img
                     src="images/ocean-pollution.png"
                     alt="Illustration de la pollution marine"
                   />
-                </div>
-                <div class="card-footer">
                   <p>
                     De même, les océans sont confrontés à une accumulation de
                     déchets plastiques, de produits chimiques et de pollutions
                     diverses, mettant en péril la vie marine et, par ricochet,
                     la nôtre.
                   </p>
-                </div>
               </div>
             </div>
+            <div class="col-md-3"></div>
+          </div>
           </div>
         </div>
       </div>
@@ -154,5 +145,6 @@
         préserver cette symbiose vitale.
       </p>
     </section>
+  </div>
   </body>
 </html>
